--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <link href="../dist/output.css" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
-<body style="overflow-x: hidden;">
+<body style="overflow-x: hidden;" class="bg-gradient-to-r from-fuchsia-100 to-fuchsia-300 to-70%">
     <div id="nav-bar" class="z-50 sticky top-0"></div>
 
     <div id="splash-screen">
@@ -19,7 +19,8 @@
         <div class="z-10 flex h-screen w-full justify-between items-center flex-col">
             <!-- I hate css -->
             <div class="h-16 w-16"></div>
-            <div class="z-10" data-aos="fade-down" data-aos-duration="600" data-aos-once="true"> <!-- CENTER TEXT -->
+             <!-- CENTER TEXT -->
+            <div class="z-10" data-aos="fade-down" data-aos-duration="1200" data-aos-once="true" data-aos-easing="ease-in-out">
                 <h1 class="font-mono text-5xl text-fuchsia-100 font-semibold tracking-widest">Team Metal Pipe</h1>
                 <p class="font-mono text-fuchsia-200 text-center">Piping Children Since 2023</p>
             </div>
@@ -34,13 +35,30 @@
     </div>
 
     <div id="about">
-        <div class="bg-fuchsia-100 h-screen">
-            <div class="h-16"></div>
-            <h1 class="text-stone-800 font-mono font-extrabold text-5xl tracking-widest flex justify-center">Piping.</h1>
-            <div class="flex flex-row w-5/12 justify-start">
-                <div class="relative w-1/4"></div>
-                <div class="w-3/4" data-aos="fade-down" data-aos-once="true">
-                    <p class="text-stone-600 font-sans text-1xl font-semibold">Here at Metal Pipe, we are dedicated to the pursuit of one singular goal: piping people. We will not rest until every person, young or old, man or woman, alive or dead, has been fully piped. We shall not back down in the face of adversity, relent under a torrent of pressure, nor cease until we have tasted the sweet metal of victory. That is the Metal Pipe promise.</p>
+        <!-- 1 -->
+        <div class="h-screen">
+            <div class=""> <!-- sticky top-12-->
+                <div class="flex flex-row justify-start items-center h-screen w-full">
+                    <div class="h-full w-3/5">
+                        <div class="h-16"></div> <!-- height of nav bar -->
+                        <div class="h-3/5 flex items-start flex-col justify-evenly">
+                            <div class="grid grid-cols-12">
+                                <div class="col-span-1"></div>
+                                <p class="col-span-11 text-stone-800 font-mono font-extrabold text-9xl tracking-widest">Piping.</p>
+                            </div>
+                            <div class="grid grid-cols-8">
+                                <div class="w-full"></div>
+                                <div class="col-span-7 flex h-full w-full justify-center items-center flex-col">
+                                    <p class="text-stone-600 font-sans text-3xl font-semibold" data-aos="fade-right" data-aos-once="true">
+                                        Here at Metal Pipe, we are dedicated to the pursuit of one singular goal: piping people. We will not rest until every person, young or old, man or woman, alive or dead, has been fully piped. We shall not back down in the face of adversity, relent under a torrent of pressure, nor cease until we have tasted the sweet metal of victory. That is the Metal Pipe promise.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="h-full w-2/5 flex justify-center items-center">
+                        <img src="../src/images/arya.png" class="h-3/4 rounded-lg outline outline-4 outline-indigo-900 outline-offset-2">
+                    </div>
                 </div>
             </div>
         </div>
