--- a/src/index.html
+++ b/src/index.html
@@ -41,23 +41,49 @@
                 <div class="flex flex-row justify-start items-center h-screen w-full">
                     <div class="h-full w-3/5">
                         <div class="h-16"></div> <!-- height of nav bar -->
-                        <div class="h-3/5 flex items-start flex-col justify-evenly">
-                            <div class="grid grid-cols-12">
-                                <div class="col-span-1"></div>
-                                <p class="col-span-11 text-stone-800 font-mono font-extrabold text-9xl tracking-widest">Piping.</p>
-                            </div>
+                        <div class="h-4/5 flex items-start flex-col justify-evenly">
                             <div class="grid grid-cols-8">
-                                <div class="w-full"></div>
-                                <div class="col-span-7 flex h-full w-full justify-center items-center flex-col">
-                                    <p class="text-stone-600 font-sans text-3xl font-semibold" data-aos="fade-right" data-aos-once="true">
-                                        Here at Metal Pipe, we are dedicated to the pursuit of one singular goal: piping people. We will not rest until every person, young or old, man or woman, alive or dead, has been fully piped. We shall not back down in the face of adversity, relent under a torrent of pressure, nor cease until we have tasted the sweet metal of victory. That is the Metal Pipe promise.
+                                <div class="col-span-1 w-full grid grid-cols-2">
+                                    <div class="w-full"></div>
+                                    <p class="-mx-3" data-aos="fade-right" data-aos-duration="700" data-aos-easing="ease-in-out" data-aos-anchor-placement="top-bottom">
+                                        <span class="relative"><!--
+                                            --><span class="block absolute -inset-3 -inset-x-3 bg-gradient-to-r from-purple-600 via-fuchsia-500" aria-hidden="true"></span><!--
+                                            --><span class="relative text-stone-800 font-mono font-extrabold text-9xl tracking-widest">Piping.</span><!--
+                                        --></span>
                                     </p>
                                 </div>
                             </div>
+                            <div class="grid grid-cols-9">
+                                <div class="col-span-1 flex justify-center items-center">
+                                    <div class="h-full w-1 bg-fuchsia-900"></div>
+                                </div>
+                                <div class="col-span-7 flex h-full w-full justify-center items-center flex-col">
+                                    <p class="text-stone-600 font-sans text-3xl font-semibold indent-8" data-aos="fade-right" data-aos-duration="700" data-aos-easing="ease-in-out" data-aos-anchor-placement="top-bottom">
+                                        Here at Metal Pipe, we are dedicated to the pursuit of one singular goal: <span class="underline text-stone-800 decoration-pink-800">piping people</span>. We will not rest until every person, young or old, man or woman, alive or dead, has been <span class="underline text-stone-800 decoration-pink-800 bold">fully piped</span>. We shall not back down in the face of adversity, relent under a torrent of pressure, nor cease until we have tasted the sweet metal of <span class="underline text-stone-800 decoration-orange-500 bold">victory</span>. <br><br> This is the
+                                        <span class="relative">
+                                            <span class="block absolute -inset-1 -skew-y-2 bg-gradient-to-r from-rose-400/50 to-orange-500/50" aria-hidden="true"></span>
+                                            <span class="relative text-stone-600 italic font-bold">Metal Pipe Promise</span><!--
+                                        --></span>.
+                                    </p>
+                                </div>
+                            </div>
+                            <div style="height: 5%;"></div>
+                            <div class="grid grid-cols-9">
+                                <div class="col-span-1"></div>
+                                <div class="col-span-7">
+                                    <p class="text-stone-600 font-sans text-3xl font-semibold indent-8 text-right" data-aos="fade-left" data-aos-duration="700" data-aos-easing="ease-in-out" data-aos-anchor-placement="top-bottom">
+                                        Piping is an intrinsic property of us all, a <span class="underline text-stone-800 decoration-yellow-600 bold">holy right</span> that we have been imbued with. With the power of the <span class="underline text-stone-800 decoration-yellow-600 bold">righteous metal</span>, it is our duty to <span class="underline text-stone-800 decoration-red-500 bold">cleanse the heretics</span> of their blasphemy. Join us, as we embark on the next great <span class="underline text-stone-800 decoration-fuchsia-500 bold">crusade</span>.
+                                    </p>
+                                </div>
+                                <div class="col-span-1 flex justify-center items-center">
+                                    <div class="h-full w-1 bg-fuchsia-900"></div>
+                                </div>
+                            </div>
                         </div>
+                        
                     </div>
-                    <div class="h-full w-2/5 flex justify-center items-center">
-                        <img src="../src/images/arya.png" class="h-3/4 rounded-lg outline outline-4 outline-indigo-900 outline-offset-2">
+                    <div class="h-full w-2/5 flex justify-center items-center" data-aos="zoom-out" data-aos-duration="700" data-aos-easing="ease-in-out" data-aos-anchor-placement="top-bottom">
+                        <img src="../src/images/arya.png" class="h-3/4 rounded-lg outline outline-4 outline-indigo-900 outline-offset-2 shadow-lg shadow-indigo-500/50">
                     </div>
                 </div>
             </div>
