--- a/src/index.html
+++ b/src/index.html
@@ -4,59 +4,62 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-
   <link href="https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.js"></script>
 
   <link href="../dist/output.css" rel="stylesheet">
 
-  <title>Metal Pipe</title>
+  <title>Team Metal Pipe</title>
 </head>
-<body class="bg-gradient-to-r from-fuchsia-100 to-fuchsia-300 to-70% overflow-hidden">
+<body class="bg-gradient-to-r from-fuchsia-100 to-fuchsia-300 to-70%">
     <div data-scroll-container>
         <div id="nav-bar" class="z-50 fixed"></div>
 
         <section id="splash-screen" data-scroll-section>
             <!-- BACKGROUND -->
-            <div class="h-full w-full">
-                <div class="z-0 absolute bg-home-1 bg-no-repeat bg-cover bg-center bg-fixed w-screen h-screen"></div>
+            <div class="h-full w-full overflow-hidden">
+                <!--div class="z-0 absolute bg-home-1 bg-no-repeat bg-cover bg-center bg-fixed w-screen h-screen"></div-->
+                <video autoplay loop muted class="z-0 absolute object-cover h-screen w-screen"><source src="../src/videos/tf2.mp4" type="video/mp4"/></video>
                 <div class="z-[1] bg-fixed absolute w-screen h-screen bg-gradient-to-b from-stone-800/60 via-stone-800/40 to-stone-800/60 backdrop-blur-[4px]"></div> <!-- TODO: have blur be based on far u scroll-->
             </div>
 
-            <div class="z-10 flex h-screen w-full justify-between items-center flex-col">
-                <!-- I hate css -->
-                <div class="h-16 w-16"></div>
-                <!-- CENTER TEXT -->
-                <div class="z-10" data-aos="fade-down" data-aos-duration="1200" data-aos-once="true">
-                    <h1 class="font-mono text-5xl text-fuchsia-100 font-semibold tracking-widest">Team Metal Pipe</h1>
-                    <p class="font-mono text-fuchsia-200 text-center">Piping Children Since 2023</p>
+            <div class="z-10 h-screen">
+                <div class="h-nav"></div>
+                <div class="z-10 absolute h-screen w-screen">
+                    <div class="flex h-screen w-screen justify-center items-center flex-col">
+                        <p class="text-base"></p>
+                        <p class="font-mono text-5xl text-fuchsia-100 font-semibold tracking-widest">Team Metal Pipe</p>
+                        <p class="z-10 font-mono text-fuchsia-200 text-base">Piping Children Since 2023</p>
+                    </div>
                 </div>
+                <div class="h-[7vh]"></div>
+                <img src="../src/icons/png/logoFull.png" class="relative z-10 h-[37vh] max-h-[30rem] ml-auto mr-auto">
 
                 <!-- BOTTOM ARROW -->
-                <div class="h-16 w-16 z-[2]"> <!-- idk if this is necessary -->
-                    <a href="#about" data-scroll-to>
-                    <svg class="animate-bounce h-16 w-16 stroke-transparent fill-fuchsia-200/30" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M11.9997 13.1714L16.9495 8.22168L18.3637 9.63589L11.9997 15.9999L5.63574 9.63589L7.04996 8.22168L11.9997 13.1714Z"></path></svg>
-                </a>
+                <div class="z-10 absolute bottom-0 w-screen">
+                    <div class="h-16 w-16 mr-auto ml-auto">
+                        <a href="#about" data-scroll-to>
+                            <svg class="animate-bounce h-16 w-16 stroke-transparent fill-fuchsia-200/30" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M11.9997 13.1714L16.9495 8.22168L18.3637 9.63589L11.9997 15.9999L5.63574 9.63589L7.04996 8.22168L11.9997 13.1714Z"></path></svg>
+                        </a>
+                    </div>
                 </div>
             </div>
         </section>
 
         <section id="about" data-scroll-section>
             <!-- 1 -->
-            <div class="relative" style="height: 200vh;"> <!-- h-[200vh] doesnt work idk why -->
+            <div id="about-container" class="relative" style="height: 200vh;"> <!-- h-[200vh] doesnt work idk why -->
                 <!-- container of the entire content, above div is just for sticky util -->
-                <div class="flex flex-row justify-start items-center h-screen w-full">
+                <div class="flex flex-row justify-start items-center h-screen w-full" data-scroll data-scroll-sticky data-scroll-target="#about-container">
                     <!-- actual page content (words) -->
                     <div class="h-full w-3/5">
-                        <div class="h-16"></div> <!-- height of nav bar -->
+                        <div class="h-nav"></div>
                         <div class="h-4/5 flex items-start flex-col justify-evenly">
                             <!-- title -->
                             <div class="grid grid-cols-8">
                                 <div class="col-span-1 w-full grid grid-cols-2">
                                     <div class="w-full"></div>
-                                    <p class="-mx-3" data-aos="fade-right">
+                                    <p class="-mx-3">
                                         <span class="relative"><!--
                                             --><span class="block absolute -inset-3 -inset-x-3 bg-gradient-to-r from-purple-600 via-fuchsia-500" aria-hidden="true"></span><!--
                                             --><span class="relative text-stone-800 font-mono font-extrabold text-9xl tracking-widest">Piping.</span><!--
@@ -71,7 +74,7 @@
                                     <div class="h-full w-1 bg-fuchsia-900"></div>
                                 </div>
                                 <div class="col-span-7 flex h-full w-full justify-center items-center flex-col">
-                                    <p class="text-stone-600 font-sans text-3xl font-semibold indent-8" data-aos="fade-right">
+                                    <p class="text-stone-600 font-sans text-3xl font-semibold indent-8">
                                         Here at Metal Pipe, we are dedicated to the pursuit of one singular goal: <span class="underline text-stone-800 decoration-pink-800">piping people</span>. We will not rest until every person, young or old, man or woman, alive or dead, has been <span class="underline text-stone-800 decoration-pink-800 bold">fully piped</span>. We shall not back down in the face of adversity, relent under a torrent of pressure, nor cease until we have tasted the sweet metal of <span class="underline text-stone-800 decoration-orange-500 bold">victory</span>. <br><br> This is the
                                         <span class="relative">
                                             <span class="block absolute -inset-1 -skew-y-2 bg-gradient-to-r from-rose-400/50 to-orange-500/50" aria-hidden="true"></span>
@@ -87,7 +90,7 @@
                             <div class="grid grid-cols-9">
                                 <div class="col-span-1"></div>
                                 <div class="col-span-7">
-                                    <p class="text-stone-600 font-sans text-3xl font-semibold indent-8 text-right" data-aos="fade-left">
+                                    <p class="text-stone-600 font-sans text-3xl font-semibold indent-8 text-right">
                                         Piping is an intrinsic property of us all, a <span class="underline text-stone-800 decoration-yellow-600 bold">holy right</span> that we have been imbued with. With the power of the <span class="underline text-stone-800 decoration-yellow-600 bold">righteous metal</span>, it is our duty to <span class="underline text-stone-800 decoration-red-500 bold">cleanse the heretics</span> of their blasphemy. Join us, as we embark on the next great <span class="underline text-stone-800 decoration-fuchsia-500 bold">crusade</span>.
                                     </p>
                                 </div>
@@ -98,7 +101,7 @@
                         </div>
                     </div>
                     <!-- image/attachment -->
-                    <div class="h-full w-2/5 flex justify-center items-center" data-aos="zoom-out">
+                    <div class="h-full w-2/5 flex justify-center items-center">
                         <img src="../src/images/arya.png" class="h-3/4 rounded-lg outline outline-4 outline-indigo-900 outline-offset-2 shadow-lg shadow-indigo-500/50">
                     </div>
                 </div>
@@ -114,16 +117,16 @@
             <!-- 2 -->
             <div class="h-screen">
                 <div class="flex flex-row justify-start items-center h-screen w-full">
-                    <div class="h-full w-2/5 flex justify-center items-center" data-aos="zoom-out">
+                    <div class="h-full w-2/5 flex justify-center items-center">
                         <img src="../src/images/arya.png" class="h-3/4 rounded-lg outline outline-4 outline-indigo-900 outline-offset-2 shadow-lg shadow-indigo-500/50">
                     </div>
                     <div class="h-full w-3/5">
-                        <div class="h-16"></div> <!-- height of nav bar -->
+                        <div class="h-nav"></div>
                         <div class="h-4/5 flex items-start flex-col justify-evenly">
                             <div class="grid grid-cols-8">
                                 <div class="col-span-1 w-full grid grid-cols-2">
                                     <div class="w-full"></div>
-                                    <p class="-mx-3" data-aos="fade-right">
+                                    <p class="-mx-3">
                                         <span class="relative"><!--
                                             --><span class="block absolute -inset-3 -inset-x-3 bg-gradient-to-r from-purple-600 via-fuchsia-500" aria-hidden="true"></span><!--
                                             --><span class="relative text-stone-800 font-mono font-extrabold text-9xl tracking-widest">Piping.</span><!--
@@ -136,7 +139,7 @@
                                     <div class="h-full w-1 bg-fuchsia-900"></div>
                                 </div>
                                 <div class="col-span-7 flex h-full w-full justify-center items-center flex-col">
-                                    <p class="text-stone-600 font-sans text-3xl font-semibold indent-8" data-aos="fade-right">
+                                    <p class="text-stone-600 font-sans text-3xl font-semibold indent-8">
                                         Here at Metal Pipe, we are dedicated to the pursuit of one singular goal: <span class="underline text-stone-800 decoration-pink-800">piping people</span>. We will not rest until every person, young or old, man or woman, alive or dead, has been <span class="underline text-stone-800 decoration-pink-800 bold">fully piped</span>. We shall not back down in the face of adversity, relent under a torrent of pressure, nor cease until we have tasted the sweet metal of <span class="underline text-stone-800 decoration-orange-500 bold">victory</span>. <br><br> This is the
                                         <span class="relative">
                                             <span class="block absolute -inset-1 -skew-y-2 bg-gradient-to-r from-rose-400/50 to-orange-500/50" aria-hidden="true"></span>
@@ -149,7 +152,7 @@
                             <div class="grid grid-cols-9">
                                 <div class="col-span-1"></div>
                                 <div class="col-span-7">
-                                    <p class="text-stone-600 font-sans text-3xl font-semibold indent-8 text-right" data-aos="fade-left">
+                                    <p class="text-stone-600 font-sans text-3xl font-semibold indent-8 text-right">
                                         Piping is an intrinsic property of us all, a <span class="underline text-stone-800 decoration-yellow-600 bold">holy right</span> that we have been imbued with. With the power of the <span class="underline text-stone-800 decoration-yellow-600 bold">righteous metal</span>, it is our duty to <span class="underline text-stone-800 decoration-red-500 bold">cleanse the heretics</span> of their blasphemy. Join us, as we embark on the next great <span class="underline text-stone-800 decoration-fuchsia-500 bold">crusade</span>.
                                     </p>
                                 </div>
@@ -176,14 +179,6 @@
         document.getElementById('nav-bar-about').setAttribute('data-scroll-to', '');
 
         // have background alternate between images/videos
-
-        AOS.init({
-            disable: true,
-            duration: 700,
-            mirror: true,
-            ease: "ease-in-out",
-            once: false,
-        });
 
         const scroll = new LocomotiveScroll({
             el: document.querySelector("[data-scroll-container]"),
