--- a/src/index.html
+++ b/src/index.html
@@ -27,9 +27,9 @@
                 <div class="h-nav"></div>
                 <div class="z-10 absolute h-screen w-screen">
                     <div class="flex h-screen w-screen justify-center items-center flex-col">
-                        <p class="text-base"></p>
+                        <p class="text-2xl"></p>
                         <p class="font-mono text-5xl text-fuchsia-100 font-semibold tracking-widest">Team Metal Pipe</p>
-                        <p class="z-10 font-mono text-fuchsia-200 text-base">Piping Children Since 2023</p>
+                        <p class="z-10 font-mono text-fuchsia-200 text-2xl">#23741</p>
                     </div>
                 </div>
                 <div class="h-[7vh]"></div>
