--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 
   <title>Team Metal Pipe</title>
 </head>
-<body class="bg-gradient-to-r from-fuchsia-100 to-fuchsia-300 to-70%">
+<body class="bg-gradient-to-r from-fuchsia-400 to-fuchsia-400 via-fuchsia-200">
     <div data-scroll-container>
         <div id="nav-bar" class="z-50 fixed"></div>
 
@@ -38,7 +38,7 @@
                 <!-- BOTTOM ARROW -->
                 <div class="z-10 absolute bottom-0 w-screen">
                     <div class="h-16 w-16 mr-auto ml-auto">
-                        <a href="#about" data-scroll-to>
+                        <a href="#main" data-scroll-to>
                             <svg class="animate-bounce h-16 w-16 stroke-transparent fill-fuchsia-200/30" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M11.9997 13.1714L16.9495 8.22168L18.3637 9.63589L11.9997 15.9999L5.63574 9.63589L7.04996 8.22168L11.9997 13.1714Z"></path></svg>
                         </a>
                     </div>
@@ -46,124 +46,46 @@
             </div>
         </section>
 
-        <section id="about" data-scroll-section>
-            <!-- 1 -->
-            <div id="about-container" class="relative" style="height: 200vh;"> <!-- h-[200vh] doesnt work idk why -->
-                <!-- container of the entire content, above div is just for sticky util -->
-                <div class="flex flex-row justify-start items-center h-screen w-full" data-scroll data-scroll-sticky data-scroll-target="#about-container">
-                    <!-- actual page content (words) -->
-                    <div class="h-full w-3/5">
-                        <div class="h-nav"></div>
-                        <div class="h-4/5 flex items-start flex-col justify-evenly">
-                            <!-- title -->
-                            <div class="grid grid-cols-8">
-                                <div class="col-span-1 w-full grid grid-cols-2">
-                                    <div class="w-full"></div>
-                                    <p class="-mx-3">
-                                        <span class="relative"><!--
-                                            --><span class="block absolute -inset-3 -inset-x-3 bg-gradient-to-r from-purple-600 via-fuchsia-500" aria-hidden="true"></span><!--
-                                            --><span class="relative text-stone-800 font-mono font-extrabold text-9xl tracking-widest">Piping.</span><!--
-                                        --></span>
-                                    </p>
-                                </div>
-                            </div>
-
-                            <!-- body 1 -->
-                            <div class="grid grid-cols-9">
-                                <div class="col-span-1 flex justify-center items-center">
-                                    <div class="h-full w-1 bg-fuchsia-900"></div>
-                                </div>
-                                <div class="col-span-7 flex h-full w-full justify-center items-center flex-col">
-                                    <p class="text-stone-600 font-sans text-3xl font-semibold indent-8">
-                                        Here at Metal Pipe, we are dedicated to the pursuit of one singular goal: <span class="underline text-stone-800 decoration-pink-800">piping people</span>. We will not rest until every person, young or old, man or woman, alive or dead, has been <span class="underline text-stone-800 decoration-pink-800 bold">fully piped</span>. We shall not back down in the face of adversity, relent under a torrent of pressure, nor cease until we have tasted the sweet metal of <span class="underline text-stone-800 decoration-orange-500 bold">victory</span>. <br><br> This is the
-                                        <span class="relative">
-                                            <span class="block absolute -inset-1 -skew-y-2 bg-gradient-to-r from-rose-400/50 to-orange-500/50" aria-hidden="true"></span>
-                                            <span class="relative text-stone-600 italic font-bold">Metal Pipe Promise</span><!--
-                                        --></span>.
-                                    </p>
-                                </div>
-                            </div>
-
-                            <div style="height: 5%;"></div>
-
-                            <!-- body 2 -->
-                            <div class="grid grid-cols-9">
-                                <div class="col-span-1"></div>
-                                <div class="col-span-7">
-                                    <p class="text-stone-600 font-sans text-3xl font-semibold indent-8 text-right">
-                                        Piping is an intrinsic property of us all, a <span class="underline text-stone-800 decoration-yellow-600 bold">holy right</span> that we have been imbued with. With the power of the <span class="underline text-stone-800 decoration-yellow-600 bold">righteous metal</span>, it is our duty to <span class="underline text-stone-800 decoration-red-500 bold">cleanse the heretics</span> of their blasphemy. Join us, as we embark on the next great <span class="underline text-stone-800 decoration-fuchsia-500 bold">crusade</span>.
-                                    </p>
-                                </div>
-                                <div class="col-span-1 flex justify-center items-center">
-                                    <div class="h-full w-1 bg-fuchsia-900"></div>
-                                </div>
-                            </div>
+        <section id="main" data-scroll-section>
+            <div class="h-nav"></div>
+            <span class="z-[1] grid grid-cols-13 w-screen">
+                <div></div>
+                <p class="z-[1] text-center text-9xl font-[1000] font-mono text-slate-50">I</p>
+                <p class="z-[1] text-center text-9xl font-[1000] font-mono text-slate-50">N</p>
+                <p class="z-[1] text-center text-9xl font-[1000] font-mono text-slate-50">N</p>
+                <p class="z-[1] text-center text-9xl font-[1000] font-mono text-slate-50">O</p>
+                <p class="z-[1] text-center text-9xl font-[1000] font-mono text-slate-50">V</p>
+                <p class="z-[1] text-center text-9xl font-[1000] font-mono text-slate-50">A</p>
+                <p class="z-[1] text-center text-9xl font-[1000] font-mono text-slate-50">T</p>
+                <p class="z-[1] text-center text-9xl font-[1000] font-mono text-slate-50">I</p>
+                <p class="z-[1] text-center text-9xl font-[1000] font-mono text-slate-50">O</p>
+                <p class="z-[1] text-center text-9xl font-[1000] font-mono text-slate-50">N</p>
+                <p class="z-[1] text-center text-9xl font-[1000] font-mono text-slate-50">.</p>
+                <div></div>
+            </span>
+            <div class="relative h-auto z-10">
+                <div class="absolute w-screen h-full">
+                    <div class="absolute top-[8%] left-[65%] w-[27%]">
+                        <span class="relative"><!--
+                        --><span class="-z-20 block absolute -inset-3 -left-[40vw] -right-20 bg-gradient-to-r from-purple-600 via-fuchsia-500" aria-hidden="true"></span><!--
+                        --><span class="relative tracking-widest text-7xl text-center font-mono text-slate-50">STRENGTH</span><!--
+                    --></span>
+                        <div class="h-4"></div>
+                        <div class="grid grid-cols-20"> <!-- only slightly scuffed -->
+                            <div class="col-span-1 z-10 h-full w-1 bg-purple-600"></div>
+                            <p class="col-span-19 tracking-wide font-mono text-stone-700 text-2xl text-left">A combination of
+                                <span class="underline decoration-slate-500 text-stone-950">carbon nanotubes</span> and
+                                <span class="underline decoration-red-500 text-stone-950">redstone wiring</span>, this claw support is the basis of our scoring mechanism.
+                            </p>
                         </div>
-                    </div>
-                    <!-- image/attachment -->
-                    <div class="h-full w-2/5 flex justify-center items-center">
-                        <img src="../src/images/arya.png" class="h-3/4 rounded-lg outline outline-4 outline-indigo-900 outline-offset-2 shadow-lg shadow-indigo-500/50">
+                        
+                        <div class="h-2"></div>
+                        <a href="error.html"><p class="font-mono text-stone-600 italic text-xl underline">Learn more...</p></a> <!-- maybe do some cool panel on the opp side of robot instead? -->
                     </div>
                 </div>
-
-                <!-- bottom of container-->
-                <div class="absolute" style="bottom:0;">
-                    <p data-scroll data-scroll-repeat>Reached bottom</p>
-                </div>
+                <img src="../src/images/pain.png" class="-z-10 w-[85%] mr-auto ml-auto relative">
             </div>
-        </section>
-
-        <section id="members" data-scroll-section>
-            <!-- 2 -->
-            <div class="h-screen">
-                <div class="flex flex-row justify-start items-center h-screen w-full">
-                    <div class="h-full w-2/5 flex justify-center items-center">
-                        <img src="../src/images/arya.png" class="h-3/4 rounded-lg outline outline-4 outline-indigo-900 outline-offset-2 shadow-lg shadow-indigo-500/50">
-                    </div>
-                    <div class="h-full w-3/5">
-                        <div class="h-nav"></div>
-                        <div class="h-4/5 flex items-start flex-col justify-evenly">
-                            <div class="grid grid-cols-8">
-                                <div class="col-span-1 w-full grid grid-cols-2">
-                                    <div class="w-full"></div>
-                                    <p class="-mx-3">
-                                        <span class="relative"><!--
-                                            --><span class="block absolute -inset-3 -inset-x-3 bg-gradient-to-r from-purple-600 via-fuchsia-500" aria-hidden="true"></span><!--
-                                            --><span class="relative text-stone-800 font-mono font-extrabold text-9xl tracking-widest">Piping.</span><!--
-                                        --></span>
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="grid grid-cols-9">
-                                <div class="col-span-1 flex justify-center items-center">
-                                    <div class="h-full w-1 bg-fuchsia-900"></div>
-                                </div>
-                                <div class="col-span-7 flex h-full w-full justify-center items-center flex-col">
-                                    <p class="text-stone-600 font-sans text-3xl font-semibold indent-8">
-                                        Here at Metal Pipe, we are dedicated to the pursuit of one singular goal: <span class="underline text-stone-800 decoration-pink-800">piping people</span>. We will not rest until every person, young or old, man or woman, alive or dead, has been <span class="underline text-stone-800 decoration-pink-800 bold">fully piped</span>. We shall not back down in the face of adversity, relent under a torrent of pressure, nor cease until we have tasted the sweet metal of <span class="underline text-stone-800 decoration-orange-500 bold">victory</span>. <br><br> This is the
-                                        <span class="relative">
-                                            <span class="block absolute -inset-1 -skew-y-2 bg-gradient-to-r from-rose-400/50 to-orange-500/50" aria-hidden="true"></span>
-                                            <span class="relative text-stone-600 italic font-bold">Metal Pipe Promise</span><!--
-                                        --></span>.
-                                    </p>
-                                </div>
-                            </div>
-                            <div style="height: 5%;"></div>
-                            <div class="grid grid-cols-9">
-                                <div class="col-span-1"></div>
-                                <div class="col-span-7">
-                                    <p class="text-stone-600 font-sans text-3xl font-semibold indent-8 text-right">
-                                        Piping is an intrinsic property of us all, a <span class="underline text-stone-800 decoration-yellow-600 bold">holy right</span> that we have been imbued with. With the power of the <span class="underline text-stone-800 decoration-yellow-600 bold">righteous metal</span>, it is our duty to <span class="underline text-stone-800 decoration-red-500 bold">cleanse the heretics</span> of their blasphemy. Join us, as we embark on the next great <span class="underline text-stone-800 decoration-fuchsia-500 bold">crusade</span>.
-                                    </p>
-                                </div>
-                                <div class="col-span-1 flex justify-center items-center">
-                                    <div class="h-full w-1 bg-fuchsia-900"></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            
         </section>
     </div>
 
@@ -175,8 +97,8 @@
         // update the nav bar links to be smooth scroll if theyre on this current page
         document.getElementById('nav-bar-main').setAttribute('href', '#splash-screen');
         document.getElementById('nav-bar-main').setAttribute('data-scroll-to', '');
-        document.getElementById('nav-bar-about').setAttribute('href', '#about');
-        document.getElementById('nav-bar-about').setAttribute('data-scroll-to', '');
+        //document.getElementById('nav-bar-about').setAttribute('href', '#about');
+        //document.getElementById('nav-bar-about').setAttribute('data-scroll-to', '');
 
         // have background alternate between images/videos
 
